--- a/packages/docs/src/content/docs/guides/using-a-service.mdx
+++ b/packages/docs/src/content/docs/guides/using-a-service.mdx
@@ -3,6 +3,8 @@ title: Using a Service
 description: Different ways to use a reactive service in your code.
 ---
 
+import { Aside } from '@astrojs/starlight/components';
+
 Once you've [created a service](/guides/creating-a-service), there are a few ways to use it.
 
 ---
@@ -57,6 +59,8 @@ counter.count(); // 1
 
 The above is simply a factory that instantiates reactive state and returns an api to drive it. In rimitive, this pattern is called a ["behavior"](/guides/creating-a-behavior), which is conventionally prefixed with `use*` for clarity (ie `useCounter` instead of `myCounter`).
 
-> Big ole note for people coming from React: prefixing with `use*` in rimitive is **just convention and nice semantics**. You can totally use behaviors in vanilla js, no problem. It doesn't grant the function any magical reactive abilities, or require you to obey any rules in how it's used.
+<Aside type="note">
+React peeps: prefixing with `use*` in rimitive is **just convention and nice semantics**. You can totally use behaviors in vanilla js, no problem. It doesn't grant the function any magical reactive abilities, or require you to obey any rules in how it's used.
+</Aside>
 
 You can stop right here, if that's all you need! But if you want to actually drive a reactive ui with state (a "component"), rimitive has primitives and patterns to help you with that too. Next up though, let's talk about the [behavior pattern](/guides/creating-a-behavior).
