chore: add llms.txt auto-generation and husky hooks
- Add scripts/generate-llms.mjs to generate llms.txt and llms-full.txt from source
- Add scripts/commit-llms.mjs to regenerate and auto-commit if changed
- Add husky with pre-push hook to keep llms docs in sync
- Add prechangeset hook to regenerate before releases
- Add pnpm docs command for full documentation regeneration
- Fix "opting in as you go" typo in getting-started
- Update tagline in docs index

--- a/packages/docs/src/content/docs/guides/getting-started.mdx
+++ b/packages/docs/src/content/docs/guides/getting-started.mdx
@@ -3,17 +3,17 @@ title: Getting Started
 description: Get up and running with Rimitive in minutes.
 ---
 
-Rimitive is built for **progressive complexity** and **low up-front commitment**. Start with just signals in a vanilla TS file. Months later, you might have a full app with routing, SSR, and streaming—without rewrites, without migrations, without "now we need a real framework."
+Rimitive is built for **progressive complexity** and **low up-front commitment**. Start with just signals in a vanilla TS file. Months later, you might have a full app with routing, SSR, and streaming—without rewrites, migrations, or a "now we need a real framework" moment.
 
-Compose only the primitives you need, opting as you go!
+Compose only the primitives you need, opting in as you go!
 
-In fact, rimitive is as much about providing **scalable patterns, conventions, and mental models** for building performant, lean, ergonomic, and scalable reactive applications as it is about providing the actual reactive primitives you need to do it. So steal the patterns and use a different framework if you don't like rimitive!
+In fact, rimitive is as much about providing **scalable patterns, conventions, and mental models** for building performant, lean, ergonomic, and scalable reactive applications as it is about providing the actual reactive primitives and tooling you need to do it.
 
 Rimitive also has a transparent architecture. You can literally replace or extend any part of it with your own custom-built tooling, at any point in time, down to the core reactive graph if you really wanted to.
 
-Patterns and architectures in rimitive follow **low coupling, high cohesion**—your reactive logic is self-contained and reusable, your UI just consumes it and has its own ui-specific logic if needed. Test behaviors without rendering, swap components without touching logic, share behaviors across frameworks, compose and share accessible patterns across your UIs.
+Patterns and architectures in rimitive are designed for **low coupling, high cohesion**—your reactive logic is self-contained and reusable, your UI just consumes it and has its own ui-specific logic if needed. Test behaviors without rendering, swap components without touching logic, share behaviors across frameworks, compose and share accessible patterns across your UIs.
 
-- **It's a reactive library, not a framework** — take only what you need, as you need it!
+- **It's a collection of reactive libraries, not a framework** — take only what you need, as you need it!
 - **No VDOM** — fine-grained updates directly to the DOM
 - **No global state** — each `compose()` creates an isolated reactive context
 
