--- a/packages/docs/src/content/docs/index.mdx
+++ b/packages/docs/src/content/docs/index.mdx
@@ -6,7 +6,7 @@ hero:
   image:
     file: ../../assets/rimitive-logo.png
   title: Rimitive
-  tagline: Design your own type-safe reactive stack
+  tagline: Design your own type-safe reactive services
   actions:
     - text: Get Started
       link: /guides/getting-started/
